[gd_scene load_steps=3 format=3 uid="uid://dkhu0tlsoxggq"]

[ext_resource type="Script" path="res://src/scenes/gui.gd" id="1_bc5ob"]
[ext_resource type="Texture2D" uid="uid://c4fvagswclaws" path="res://assets/coin.svg" id="2_os4qp"]

[node name="GUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_bc5ob")

[node name="HUD" type="MarginContainer" parent="."]
process_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 50

[node name="ScoreContainer" type="VFlowContainer" parent="HUD"]
layout_mode = 2

[node name="Score" type="Label" parent="HUD/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0
"

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/ScoreContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="Coins" type="Label" parent="HUD/ScoreContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"

[node name="TextureRect" type="TextureRect" parent="HUD/ScoreContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_os4qp")
stretch_mode = 3

[node name="PauseContainer" type="VFlowContainer" parent="HUD"]
layout_mode = 2
size_flags_horizontal = 8

[node name="PauseButton" type="Button" parent="HUD/PauseContainer"]
layout_mode = 2
text = "Pause"

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu"]
process_mode = 2
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/CenterContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="ContinueButton" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Continue"

[node name="QuitButton" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.415686)

[node name="GameOverMenu" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOverMenu"]
process_mode = 2
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 300

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 75

[node name="GameOverLabel" type="Label" parent="GameOverMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "GAME OVER"
horizontal_alignment = 1

[node name="Scores" type="VBoxContainer" parent="GameOverMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="YourScore" type="Label" parent="GameOverMenu/MarginContainer/VBoxContainer/Scores"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Your score is: "

[node name="TotalCoins" type="Label" parent="GameOverMenu/MarginContainer/VBoxContainer/Scores"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Your total coins: "

[node name="BestScore" type="Label" parent="GameOverMenu/MarginContainer/VBoxContainer/Scores"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "The best score is: "

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="RestartButton" type="Button" parent="GameOverMenu/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Restart"

[node name="QuitButton" type="Button" parent="GameOverMenu/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="ColorRect" type="ColorRect" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.415686)

[connection signal="pressed" from="HUD/PauseContainer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="GameOverMenu/MarginContainer/VBoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverMenu/MarginContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
